Removing TerminalDrop hook on disable

--- a/ImprovedCommandEssense/manifest.json
+++ b/ImprovedCommandEssense/manifest.json
@@ -2,7 +2,7 @@
 	"name": "ImprovedCommandEssence",
 	"version_number": "1.0.0",
 	"website_url": "https://github.com/Cercain/ImprovedCommandEssence",
-	"description": "Balances the Command Artifact to only show a smaller selection of options",
+	"description": "Balances the Command Artifact to only show a smaller selection of options plus additional QOL [HIGH CONFIGURABILITY]",
 	"dependencies": [
 		"bbepis-BepInExPack-5.4.1902",
 		"RiskofThunder-HookGenPatcher-1.2.3"
